<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="multiply">MULTIPLY</string>
    <string name="divide">DIVIDE</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="menuReset">Clean</string>
    <string name="menuAbout">About</string>
    <string name="resetConfirmation">Are you sure you want to clean all data of this calculator?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="power">POWER</string>
    <string name="copy">Copy</string>
    <string name="aboutURL">market://details?id=net.tecnotopia.SimpleCalculator</string>
    <string name="editDefaultText">-12345678901234567890.</string>
    <string name="memoryDefault">M=-123456789.12345678901</string>
    <string name="lastAnswerDefault">ANS=-123456789.12345678901</string>
    <string name="btnMemoryStore">MS</string>
    <string name="btnMemoryAdd">M+</string>
    <string name="btnMemorySubtract">M-</string>
    <string name="btnMemoryRecall">MR</string>
    <string name="btnMemoryClear">MC</string>
    <string name="btnPercent">%</string>
    <string name="btnSquareRoot">√</string>
    <string name="btnPowerOfTwo">x²</string>
    <string name="btnPowerOfN">xⁿ</string>
    <string name="btnAllClear">AC</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnBackspace">DEL</string>
    <string name="btnClear">C</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnMultiply">×</string>
    <string name="btnDivide">÷</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnAdd">+</string>
    <string name="btnSubtract">-</string>
    <string name="btn0">0</string>
    <string name="btnDecimal">.</string>
    <string name="btnSignal">±</string>
    <string name="btnLastAnswer">ANS</string>
    <string name="btnEquals">=</string>
</resources>
