<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/tableTop" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/display" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editDefaultText" android:layout_weight="0.8" style="@style/Display">
            <requestFocus />
        </EditText>
        <TableRow android:id="@id/rowStatus" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:id="@id/memoryView" android:text="@string/memoryDefault" style="@style/Status" />
            <TextView android:id="@id/answerView" android:text="@string/lastAnswerDefault" style="@style/Status" />
        </TableRow>
    </TableLayout>
    <TableLayout android:id="@id/tableButtons" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableRow android:id="@id/rowButtons0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/buttonMemoryStore" android:text="@string/btnMemoryStore" android:onClick="onMemoryStoreClick" style="@style/MemoryButton" />
            <Button android:id="@id/buttonMemoryAdd" android:text="@string/btnMemoryAdd" android:onClick="onMemoryAddClick" style="@style/MemoryButton" />
            <Button android:id="@id/buttonMemorySubtract" android:text="@string/btnMemorySubtract" android:onClick="onMemorySubtractClick" style="@style/MemoryButton" />
            <Button android:id="@id/buttonMemoryRecall" android:text="@string/btnMemoryRecall" android:onClick="onMemoryRecallClick" style="@style/MemoryButton" />
            <Button android:id="@id/buttonMemoryClear" android:text="@string/btnMemoryClear" android:onClick="onMemoryClearClick" style="@style/DestructiveButton" />
        </TableRow>
        <TableRow android:id="@id/rowButtons1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/buttonPercent" android:text="@string/btnPercent" android:onClick="onPercentClick" style="@style/ScientificButton" />
            <Button android:id="@id/buttonSquareRoot" android:text="@string/btnSquareRoot" android:onClick="onSquareRootClick" style="@style/ScientificButton" />
            <Button android:id="@id/buttonPowerTwo" android:text="@string/btnPowerOfTwo" android:onClick="onPowerTwoClick" style="@style/ScientificButton" />
            <Button android:id="@id/buttonPowerN" android:tag="@string/power" android:text="@string/btnPowerOfN" android:onClick="onOperatorClick" style="@style/ScientificButton" />
            <Button android:id="@id/buttonAllClear" android:text="@string/btnAllClear" android:onClick="onAllClearClick" style="@style/DestructiveButton" />
        </TableRow>
        <TableRow android:id="@id/rowButtons2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/button7" android:text="@string/btn7" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/button8" android:text="@string/btn8" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/button9" android:text="@string/btn9" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/buttonBackspace" android:text="@string/btnBackspace" android:onClick="onBackspaceClick" style="@style/DestructiveButton" />
            <Button android:id="@id/buttonClear" android:text="@string/btnClear" android:onClick="onClearClick" style="@style/DestructiveButton" />
        </TableRow>
        <TableRow android:id="@id/rowButtons3" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/button4" android:text="@string/btn4" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/button5" android:text="@string/btn5" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/button6" android:text="@string/btn6" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/buttonMultiply" android:tag="@string/multiply" android:text="@string/btnMultiply" android:onClick="onOperatorClick" style="@style/BasicOperationButton" />
            <Button android:id="@id/buttonDivide" android:tag="@string/divide" android:text="@string/btnDivide" android:onClick="onOperatorClick" style="@style/BasicOperationButton" />
        </TableRow>
        <TableRow android:id="@id/rowButtons4" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/button1" android:text="@string/btn1" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/button2" android:text="@string/btn2" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/button3" android:text="@string/btn3" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/buttonAdd" android:tag="@string/add" android:text="@string/btnAdd" android:onClick="onOperatorClick" style="@style/BasicOperationButton" />
            <Button android:id="@id/buttonSubtract" android:tag="@string/subtract" android:text="@string/btnSubtract" android:onClick="onOperatorClick" style="@style/BasicOperationButton" />
        </TableRow>
        <TableRow android:id="@id/rowButtons5" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/button0" android:text="@string/btn0" android:onClick="onNumberClick" style="@style/NumberButton" />
            <Button android:id="@id/buttonDecimalSeparator" android:text="@string/btnDecimal" android:onClick="onDecimalSeparatorClick" style="@style/MiscButton" />
            <Button android:id="@id/buttonChangeSignal" android:text="@string/btnSignal" android:onClick="onChangeSignalClick" style="@style/MiscButton" />
            <Button android:id="@id/buttonLastAnswer" android:text="@string/btnLastAnswer" android:onClick="onLastAnswerClick" style="@style/MemoryButton" />
            <Button android:id="@id/buttonEquals" android:text="@string/btnEquals" android:onClick="onEqualsClick" style="@style/BasicOperationButton" />
        </TableRow>
    </TableLayout>
</LinearLayout>